WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320878
Unreviewed, speculative fix for watchOS
https://bugs.webkit.org/show_bug.cgi?id=320878
Summary
Unreviewed, speculative fix for watchOS
Yusuke Suzuki
Reported
2026-08-02 23:55:50 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-02 23:55:58 PDT
<
rdar://problem/183898854
>
Yusuke Suzuki
Comment 2
2026-08-02 23:56:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70746
EWS
Comment 3
2026-08-02 23:58:34 PDT
Committed
318438@main
(86132c7a3b4c): <
https://commits.webkit.org/318438@main
> Reviewed commits have been landed. Closing PR #70746 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug