Unreviewed, speculative fix for watchOS https://bugs.webkit.org/show_bug.cgi?id=320878 rdar://183898854

* Source/JavaScriptCore/assembler/RegisterInfo.h:

Canonical link: https://commits.webkit.org/318438@main